[package]
name = "hhmmss"
version = "0.1.0"
authors = ["Tianyi Shi <ShiTianyi2001@outlook.com>"]
edition = "2018"
license = "MIT"
description = "Format time and duration in chrono, std::time and time as HH:MM:SS and HH:MM:SS.xxx"
repository = "https://github.com/TianyiShi2001/hhmmss"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
time = "0.3"
